--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;500;600;700;800;900&family=Roboto:wght@400;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <title>Kurt-DS</title>
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="style.css" />
@@ -24,32 +25,11 @@
           <li class="nav-item">
             <a href="#projects" class="anchor">projects</a>
           </li>
-          <div class="darmode-btn">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="24"
-              height="24"
-              viewBox="0 0 24 24"
-              fill="none"
-            >
-              <g clip-path="url(#clip0_2_118)">
-                <path
-                  d="M12 0C10.891 0 9.822 0.162 8.803 0.444C12.629 6.377 6.777 13.94 0.022 11.572L0 12C0 18.627 5.373 24 12 24C18.627 24 24 18.627 24 12C24 5.373 18.627 0 12 0Z"
-                  fill="#FFFBFC"
-                />
-              </g>
-              <defs>
-                <clipPath id="clip0_2_118">
-                  <rect width="24" height="24" fill="white" />
-                </clipPath>
-              </defs>
-            </svg>
-          </div>
         </ul>
       </div>
     </nav>
     <section class="home" id="home">
-      <header class="profile">
+      <header class="profile" data-aos="fade-right" data-aos-duration="1000">
         <p>Hi. I am</p>
         <div class="fullname"><span>Allen Kurt D.</span></div>
         <p>Full-Stack Web Developer</p>
@@ -85,6 +65,7 @@
         class="logo-image"
         src="assets/character 18 1.svg"
         alt="Programmer image"
+        data-aos="fade-left" data-aos-duration="1000"
       />
     </section>
     <section id="about">
@@ -95,11 +76,12 @@
 
       <div class="about-content">
         <img
+            data-aos="fade-right" data-aos-duration="1000"
           class="about-image"
           src="assets/Wavy_Bus-04_Single-09.jpg"
           alt="Web Developer Image"
         />
-        <div class="about-text">
+        <div class="about-text" data-aos="fade-left" data-aos-duration="1000">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias
           eius esse fugit explicabo deserunt nesciunt quod repudiandae velit est
           sapiente? Illum nisi, nesciunt cumque corporis esse doloremque, magnam
@@ -120,7 +102,7 @@
         <div class="line"></div>
       </header>
 
-      <div class="skills-container">
+      <div class="skills-container" data-aos="fade-up" data-aos-duration="1000">
         <div class="skill-container">
           <svg
             xmlns="http://www.w3.org/2000/svg"
@@ -293,7 +275,7 @@
         <div class="line"></div>
       </header>
 
-      <div class="card">
+      <div class="card" data-aos="fade-left" data-aos-duration="1000">
         <div class="card-description">
           <h6>Personal Portfolio</h6>
           <p>
@@ -314,8 +296,8 @@
           <img src="assets/Landing Page.svg" alt="" />
         </div>
       </div>
-      <div class="card">
-        <div class="card-description">
+      <div class="card" data-aos="fade-right" data-aos-duration="1000">
+        <div class="card-description" >
           <h6>YelpCamp</h6>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias
@@ -385,6 +367,10 @@
       </div>
     </footer>
   </body>
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
   <script>
     const elements = document.querySelectorAll(".stack");
 
@@ -414,7 +400,5 @@
         });
       });
     });
-
-
   </script>
 </html>
