made some style changes

--- a/index.html
+++ b/index.html
@@ -90,27 +90,34 @@
           alt="Web Developer Image"
         />
         <div class="about-text" data-aos="fade-left" data-aos-duration="1000">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias
-          eius esse fugit explicabo deserunt nesciunt quod repudiandae velit est
-          sapiente? Illum nisi, nesciunt cumque corporis esse doloremque, magnam
-          magni enim at fugiat eos ea, deleniti vitae voluptatibus ratione. Odit
-          vero et, ab magnam accusantium itaque nam reiciendis maxime dolorem
-          consectetur? Lorem ipsum dolor sit amet consectetur adipisicing elit.
-          Molestias eius esse fugit explicabo deserunt nesciunt quod repudiandae
-          velit est sapiente? Illum nisi, nesciunt cumque corporis esse
-          doloremque, magnam magni enim at fugiat eos ea, deleniti vitae
-          voluptatibus ratione. Odit vero et, ab magnam accusantium itaque nam
-          reiciendis maxime dolorem consectetur?
+          <p>
+            I'm <span id="name">Allen Kurt Delos Santos</span>, a self-taught full-stack web developer with over a
+            year of hands-on experience. I specialize in crafting responsive frontend
+            interfaces and building robust backend solutions. I'm committed to
+            staying current with the latest technologies, embracing challenges,
+            and collaborating with fellow developers. Currently, I'm actively
+            seeking exciting web development-related projects, freelancing gigs,
+            and part-time job opportunities. Let's connect and build something
+            amazing together!
+          </p>
           <a
             target="_blank"
             href="https://drive.google.com/drive/folders/1slkVoklvEW4ANV_YaTGU5Br49K6WNEkt?usp=sharing"
           >
             VIEW MY CERTIFICATIONS
-            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" fill="none">
-              <path d="M28.9335 13.6001L20.1335 5.60005C19.4669 4.93338 18.6669 5.60005 18.6669 6.66672V10.6667C12.4002 10.6667 7.06687 14.5334 4.53353 19.7334C3.6002 21.4667 3.06687 23.3334 2.66687 25.2001C2.4002 26.5334 4.4002 27.2001 5.2002 26.0001C8.13353 21.3334 13.0669 18.2667 18.6669 18.2667V22.6667C18.6669 23.7334 19.4669 24.4001 20.1335 23.7334L28.9335 15.7334C29.4669 15.2001 29.4669 14.1334 28.9335 13.6001Z" fill="white"/>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="32"
+              height="32"
+              viewBox="0 0 32 32"
+              fill="none"
+            >
+              <path
+                d="M28.9335 13.6001L20.1335 5.60005C19.4669 4.93338 18.6669 5.60005 18.6669 6.66672V10.6667C12.4002 10.6667 7.06687 14.5334 4.53353 19.7334C3.6002 21.4667 3.06687 23.3334 2.66687 25.2001C2.4002 26.5334 4.4002 27.2001 5.2002 26.0001C8.13353 21.3334 13.0669 18.2667 18.6669 18.2667V22.6667C18.6669 23.7334 19.4669 24.4001 20.1335 23.7334L28.9335 15.7334C29.4669 15.2001 29.4669 14.1334 28.9335 13.6001Z"
+                fill="white"
+              />
             </svg>
-            </a
-          >
+          </a>
         </div>
       </div>
     </section>
