--- a/index.html
+++ b/index.html
@@ -91,14 +91,14 @@
         />
         <div class="about-text" data-aos="fade-left" data-aos-duration="1000">
           <p>
-            I'm <span id="name">Allen Kurt Delos Santos</span>, a self-taught full-stack web developer with over a
-            year of hands-on experience. I specialize in crafting responsive frontend
-            interfaces and building robust backend solutions. I'm committed to
-            staying current with the latest technologies, embracing challenges,
-            and collaborating with fellow developers. Currently, I'm actively
-            seeking exciting web development-related projects, freelancing gigs,
-            and part-time job opportunities. Let's connect and build something
-            amazing together!
+            I'm <span id="name">Allen Kurt Delos Santos</span>, a self-taught
+            full-stack web developer with over a year of hands-on experience. I
+            specialize in crafting responsive frontend interfaces and building
+            robust backend solutions. I'm committed to staying current with the
+            latest technologies, embracing challenges, and collaborating with
+            fellow developers. Currently, I'm actively seeking exciting web
+            development-related projects, freelancing gigs, and part-time job
+            opportunities. Let's connect and build something amazing together!
           </p>
           <a
             target="_blank"
@@ -304,12 +304,10 @@
         <div class="card-description">
           <h6>Personal Portfolio</h6>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias
-            eius esse fugit explicabo deserunt nesciunt quod repudiandae velit
-            est sapiente? Illum nisi, nesciunt cumque corporis esse doloremque,
-            magnam magni enim at fugiat eos ea, deleniti vitae voluptatibus
-            ratione. Odit vero et, ab magnam accusantium itaque nam reiciendis
-            maxime dolorem consectetur?
+            My very first personal website portfolio. This was built from pure
+            HTML, CSS, and JavaScript and powered by AOS library for smooth
+            on-scroll animations. I crafted this site for one month as a
+            platform to enhance and showcase my web development skills.
           </p>
           <div class="tech-stack">
             <p class="stack">HTML5</p>
@@ -325,12 +323,10 @@
         <div class="card-description">
           <h6>YelpCamp</h6>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias
-            eius esse fugit explicabo deserunt nesciunt quod repudiandae velit
-            est sapiente? Illum nisi, nesciunt cumque corporis esse doloremque,
-            magnam magni enim at fugiat eos ea, deleniti vitae voluptatibus
-            ratione. Odit vero et, ab magnam accusantium itaque nam reiciendis
-            maxime dolorem consectetur?
+            This was a project from Colt Steele's Web Development BootCamp. This
+            was my first hands-on experience in full-stack web development. I
+            had lots of fun and learned a lot of the basics of full-stack web
+            development utilizing various modern technologies.
           </p>
           <div class="tech-stack">
             <p class="stack">HTML5</p>
